# nagini

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
src/algos/: mr_robot.py
src/data/: make_dataset.py
src/demo-src/scribblybits/: bagels.py  usegpt.py
src/demo-src/stdlib/: decorators.py  doctest_example.py
src/django/posterboi/: manage.py
src/django/tutorial_docs/: Advanced tutorial_ How to write reusable apps _ Django documentation _ Django.html  What to read next _ Django documentation _ Django.html  Writing your first Django app, part 1 _ Django documentation _ Django.html  Writing your first Django app, part 2 _ Django documentation _ Django.html  Writing your first Django app, part 3 _ Django documentation _ Django.html  Writing your first Django app, part 4 _ Django documentation _ Django.html  Writing your first Django app, part 5 _ Django documentation _ Django.html  Writing your first Django app, part 6 _ Django documentation _ Django.html  Writing your first Django app, part 7 _ Django documentation _ Django.html  Writing your first Django app, part 8 _ Django documentation _ Django.html  (+1 more)
src/exams/: Python.md  example.py  parser.py
src/hagrid/: README.rst  ex_res.txt  hagrid.db  proompter.md  taxonomy.txt
src/hagrid/app/: core.py
src/hagrid/tests/: context.py  (+1 more)
src/hagridcore/: LICENSE  reduce_list_prompt.txt  setup.py
src/hagridsflask/: app.py
src/hogwarts/: ascension.py
src/koans/: _runner_tests.py  watcher.py
src/powerful_python/: README.txt
(+40 files in other folders)
