[tool.poetry]
name = "nagini"
version = "0.1.0"
description = "to take down the dark lord once and for fucking all"
authors = ["harry"]

[tool.poetry.dependencies]
python = "^3.10"

jupyterlab = "*"
typer = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylint = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
