[tool.poetry]
name = "nagini"
version = "0.1.0"
description = "to take down the dark lord once and for fucking all"
authors = ["harry"]

[tool.poetry.dependencies]
python = "^3.10"

jupyterlab = "*"
typer = "*"
ipython = "^8.16.1"
django = "^4.2.6"
click = "^8.1.7"
ipdb = "^0.13.13"
flask = "^3.0.0"
fastapi = {extras = ["all"], version = "^0.104.1"}

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylint = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
